reset button added

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
                 <button onclick="take()">Take</button>
             </div>
             <div class="test">
-                <button onclick="hold()">Hold</button>
+                <button onclick="reset()">Reset</button>
             </div>
             <div class="test">
-                <button onclick="skip()">Skip</button>
+                <button onclick="skip()">Bet+</button>
+                <span id="sorry"><-- не работает</span>
             </div>
         </div>
     </div>
